// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checked-color prop 1`] = `
<div class="ca2-checkbox-group">
  <div role="checkbox" tabindex="0" aria-checked="true" class="ca2-checkbox">
    <div class="ca2-checkbox__icon ca2-checkbox__icon--round ca2-checkbox__icon--checked"><i class="ca2-icon ca2-icon-success" style="border-color: black; background-color: black;">
        <!----></i></div><span class="ca2-checkbox__label">label</span>
  </div>
  <div role="checkbox" tabindex="0" aria-checked="true" class="ca2-checkbox">
    <div class="ca2-checkbox__icon ca2-checkbox__icon--round ca2-checkbox__icon--checked"><i class="ca2-icon ca2-icon-success" style="border-color: white; background-color: white;">
        <!----></i></div><span class="ca2-checkbox__label">label</span>
  </div>
</div>
`;

exports[`icon-size prop 1`] = `
<div class="ca2-checkbox-group">
  <div role="checkbox" tabindex="0" aria-checked="false" class="ca2-checkbox">
    <div class="ca2-checkbox__icon ca2-checkbox__icon--round" style="font-size: 10rem;"><i class="ca2-icon ca2-icon-success">
        <!----></i></div><span class="ca2-checkbox__label">label</span>
  </div>
  <div role="checkbox" tabindex="0" aria-checked="false" class="ca2-checkbox">
    <div class="ca2-checkbox__icon ca2-checkbox__icon--round" style="font-size: 5rem;"><i class="ca2-icon ca2-icon-success">
        <!----></i></div><span class="ca2-checkbox__label">label</span>
  </div>
</div>
`;

exports[`label disabled 1`] = `
<div role="checkbox" tabindex="0" aria-checked="undefined" class="ca2-checkbox ca2-checkbox--label-disabled">
  <div class="ca2-checkbox__icon ca2-checkbox__icon--round"><i class="ca2-icon ca2-icon-success">
      <!----></i></div><span class="ca2-checkbox__label">Label</span>
</div>
`;

exports[`label-position prop 1`] = `
<div role="checkbox" tabindex="0" aria-checked="undefined" class="ca2-checkbox"><span class="ca2-checkbox__label ca2-checkbox__label--left">Label</span>
  <div class="ca2-checkbox__icon ca2-checkbox__icon--round"><i class="ca2-icon ca2-icon-success">
      <!----></i></div>
</div>
`;
